jshxl report online

--- a/lang/zh.json
+++ b/lang/zh.json
@@ -9,8 +9,8 @@
     "Sort Number": "报表排序",
     "Report Display Sort Number, default 10000, the larger the number, the higher the display position.": "报表展示顺序，数字越大越靠前。同时，也会根据该字段去确定报表分组的展示顺序。",
     "Data Ease": "数据链接",
-    "DataEase DV or DBS element id.": "DataEase 仪表板或数据大屏 ID",
-    "DataEase chart element id.": "DataEase 图表 ID",
+    "DataEase DV or DBS element id.": "DataEase 仪表板 或 数据大屏 ID",
+    "DataEase chart element id.": "DataEase 视图 ID",
     "Auth Users": "授权用户",
     "Report Status: 0, Disable; 1, Enable": "报表启用状态：0，停用；1，启用。默认停用",
     "Report Status": "启用状态",
@@ -18,6 +18,8 @@
     "Report Users": " 位用户",
     "Created At": "创建时间",
     "Updated At": "更新时间",
-    "DataEase DV": "仪表大屏",
+    "DataEase Type": "图表类型",
+    "The type of DataEase report.": "DataEase 报表类型：仪表板 或 数据大屏",
+    "DataEase ID": "图表编码",
     "DataEase Chart": "数据视图"
 }
